--- a/Checklists/Base.lproj/Main.storyboard
+++ b/Checklists/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                     <navigationItem key="navigationItem" title="Checklists" id="Mv4-ms-5o1">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="R5b-cu-bXu">
                             <connections>
-                                <action selector="addItem" destination="yQn-9K-nEj" id="YS3-WB-r5T"/>
+                                <segue destination="uO1-CE-Q79" kind="presentation" id="Kh0-XG-E7l"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -52,6 +52,59 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="65f-aT-Qdd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="972" y="102.09895052473765"/>
+        </scene>
+        <!--Add Item-->
+        <scene sceneID="wVi-Xx-YK7">
+            <objects>
+                <tableViewController id="3Wz-Jv-yLt" customClass="AddItemViewController" customModule="Checklists" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="UaV-tl-HrK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <sections>
+                            <tableViewSection id="j3e-mt-rPF">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="gbI-LP-i0D">
+                                        <rect key="frame" x="0.0" y="35" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gbI-LP-i0D" id="hh4-78-jmN">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KHR-o2-U2y">
+                                                    <rect key="frame" x="16" y="6" width="343" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="3Wz-Jv-yLt" id="6HJ-z3-cXs"/>
+                            <outlet property="delegate" destination="3Wz-Jv-yLt" id="KDs-Ed-FZT"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Add Item" id="1IT-Hc-pE0">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="7Sd-KN-FdK">
+                            <connections>
+                                <action selector="cancel" destination="3Wz-Jv-yLt" id="QX0-DR-wD5"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="Vhx-KV-JfC">
+                            <connections>
+                                <action selector="done" destination="3Wz-Jv-yLt" id="zOA-HN-dnS"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SAl-wc-wU8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2716" y="101.19940029985008"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ROF-1g-Nwp">
@@ -70,6 +123,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fKF-MH-5n6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="102.09895052473765"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Wwq-mc-gU3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uO1-CE-Q79" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8Bb-pe-m65">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3Wz-Jv-yLt" kind="relationship" relationship="rootViewController" id="KYq-WW-joz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kzc-EF-dTK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1776.8" y="101.19940029985008"/>
         </scene>
     </scenes>
 </document>
