--- a/Checklists/Base.lproj/Main.storyboard
+++ b/Checklists/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                     <navigationItem key="navigationItem" title="Checklists" id="Mv4-ms-5o1">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="R5b-cu-bXu">
                             <connections>
-                                <segue destination="uO1-CE-Q79" kind="presentation" id="Kh0-XG-E7l"/>
+                                <segue destination="uO1-CE-Q79" kind="presentation" identifier="AddItem" id="Kh0-XG-E7l"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -71,14 +71,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of the item" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KHR-o2-U2y">
+                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of the Item" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KHR-o2-U2y">
                                                     <rect key="frame" x="16" y="6" width="343" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                     <connections>
-                                                        <action selector="done" destination="3Wz-Jv-yLt" eventType="editingDidEndOnExit" id="kx4-lb-LBY"/>
+                                                        <action selector="done" destination="3Wz-Jv-yLt" eventType="editingDidEndOnExit" id="51n-4I-o4c"/>
                                                         <outlet property="delegate" destination="3Wz-Jv-yLt" id="azB-aw-lZ3"/>
                                                     </connections>
                                                 </textField>
